--- a/services.html
+++ b/services.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Great Idea - Responsive I</title>
 
@@ -14,123 +14,163 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
 
-<body class='body-class'>
-  <section class='nav-bar'>
-    <nav>
-      <a href="services.html">Services</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
+  <body class="body-class">
+    <section class="nav-bar">
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
 
-    <div class='nav-logo'>
-      <a href="index.html">
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </a>
-    </div>
-  </section>
-
-  <div class='header-img'>
-    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-  </div>
-
-  <section class="services-top-container">
-    <h2>Services</h2>
-
-    <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus
-      rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
-      justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis
-      iaculis.</p>
-  </section>
-
-  <section class="services-middle-container">
-    <div class='services-middle-content'>
-      <h4>Digital Design</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-
-
-    <div class='services-middle-content'>
-      <h4>UX / UI</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-
-    <div class='services-middle-content'>
-      <h4>Digital Marketing</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-
-    <div class='services-middle-content'>
-      <h4>Web Development</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-
-    <div class='services-middle-content'>
-      <h4>iOS Development</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-
-    <div class='services-middle-content'>
-      <h4>Android Development</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-        sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button class="services-button">Learn More</button>
-    </div>
-  </section>
-  <section class='facts-container'>
-    <div class='facts-content'>
-      <h4>Some Facts About Our Services</h4>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <div id='facts-list'>
-        <ul style='list-style-type: square'>
-          <li>Awesome thing</li>
-          <li>Amazing thing</li>
-          <li>Cool thing</li>
-          <li>Great thing</li>
-        </ul>
+      <div class="nav-logo">
+        <a href="index.html">
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Great Idea! Company logo."
+          />
+        </a>
       </div>
-    </div>
-    <div>
-      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-    </div>
-  </section>
-  <footer>
-    Copyright Great Idea! 2018
-  </footer>
+    </section>
 
-</body>
+    <div class="header-img">
+      <img
+        class="services-header-img"
+        src="img/services-header.jpg"
+        alt="Our services header image"
+      />
+    </div>
 
+    <section class="services-top-container">
+      <h2>Services</h2>
+
+      <p>
+        Our services provide the best digital value in nulla suscipit interdum
+        diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
+        iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
+        cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+        pellentesque eleifend. Mauris euismod facilisis iaculis.
+      </p>
+    </section>
+
+    <section class="services-middle-container">
+      <div class="services-middle-content">
+        <h4>Digital Design</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+
+      <div class="services-middle-content">
+        <h4>UX / UI</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+
+      <div class="services-middle-content">
+        <h4>Digital Marketing</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+
+      <div class="services-middle-content">
+        <h4>Web Development</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+
+      <div class="services-middle-content">
+        <h4>iOS Development</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+
+      <div class="services-middle-content">
+        <h4>Android Development</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+
+        <button class="services-button">Learn More</button>
+      </div>
+    </section>
+    <section class="facts-container">
+      <div class="facts-content">
+        <h4>Some Facts About Our Services</h4>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <div id="facts-list">
+          <ul style="list-style-type: square">
+            <li>Awesome thing</li>
+            <li>Amazing thing</li>
+            <li>Cool thing</li>
+            <li>Great thing</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <img
+          class="services-info-img"
+          src="img/services-info.png"
+          alt="one of our employees hard at work"
+        />
+      </div>
+    </section>
+    <footer>
+      Copyright Great Idea! 2018
+    </footer>
+  </body>
 </html>
